<resources>
    <string name="google_app_id">748607264448</string>
    <string name="app_name">King\'s Tandem Learning</string>
    <string name="settings">Settings</string>
    <string name="kings">King\'s College London</string>
    <string name="tandem">Tandem Language Learning</string>
    <string name="surname">Surname</string>
    <string name="forename">Forename</string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="email">KCL Email</string>
    <string name="login">Login</string>
    <string name="logout">Log Out</string>
    <string name="signup">Sign Up</string>
    <string name="about_me">About Me</string>
    <string name="about_us">About Us</string>
    <string name="refresh">Refresh</string>
    <string name="accountSettings">Account Settings</string>
    <string name="prevAccount"><u>Already have an account? Login...</u></string>
    <string name="newAccount"><u>Need an account? Sign Up!</u></string>
    <string name="forgotPassword"><u>Forgot your password? Click here!</u></string>
    <string name="navDrawOpen">Open Navigation Drawer</string>
    <string name="navDrawClose">Close Navigation Drawer</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="search">User Search</string>
    <string name="verification">Verification Code</string>
    <string name="enterEmail">Enter your KCL email address</string>
    <string name="enterNewPass">Enter your new password</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="language">Select a Language</string>
    <string name="learn">I\'m looking to learn…</string>
    <string name="know">I\'m fluent in…</string>
    <string name="score">Score: </string>
    <string name="send">Send</string>

    <string name="login_dialog_message">Logging In&#8230;</string>
    <string name="login_name_hint">Your name</string>

    <string name="action_settings">Settings</string>
    <string name="action_details">Conversation Details</string>
    <string name="action_sendlogs">Send Debug Info</string>

    <string name="title_conversations_list">Conversations</string>
    <string name="title_select_conversation">New Message</string>
    <string name="title_messages_list">Messages</string>
    <string name="title_settings">Settings</string>
    <string name="title_conversation_details">Details</string>

    <string name="alert_message_logout">Log out?</string>
    <string name="alert_message_delete_message">Delete message?</string>
    <string name="alert_message_delete_conversation">Delete conversation?</string>

    <string name="alert_dialog_logout">Logging Out&#8230;</string>

    <string name="alert_button_cancel">Cancel</string>
    <string name="alert_button_delete">Delete</string>
    <string name="alert_button_remove">Remove</string>
    <string name="alert_button_block">Block</string>
    <string name="alert_button_unblock">Unblock</string>
    <string name="alert_button_logout">Log Out</string>

    <string name="attachment_menu_camera">Camera</string>
    <string name="attachment_menu_gallery">Gallery</string>
    <string name="attachment_menu_location">Location</string>

    <string name="toast_group_name_updated">Group name updated</string>
    <string name="toast_failed_to_deauthenticate">Failed to deauthenticate: %1$s</string>
    <string name="toast_copied_to_clipboard">Copied to clipboard</string>

    <string name="conversation_details_title_options">Options</string>
    <string name="conversation_details_hint_group_name">Group Name</string>
    <string name="conversation_details_switch_show_notifications">Show Notifications</string>
    <string name="conversation_details_button_leave_group">Leave Group</string>
    <string name="conversation_details_title_participants">Participants</string>
    <string name="conversation_details_button_add_participants">Add Participants</string>

    <string name="settings_clipboard_description">Settings</string>
    <string name="settings_content_connected">Connected</string>
    <string name="settings_content_disconnected">Disconnected</string>
    <string name="settings_content_app_version">Name %1$s / Code %2$d</string>
    <string name="settings_content_android_version">Version %1$s / API level %2$d</string>
    <string name="settings_content_disk_unlimited">Unlimited</string>
    <string name="settings_content_disk_usage">%1$.2f %2$s</string>
    <string name="settings_content_disk_gb">GB</string>
    <string name="settings_content_disk_mb">MB</string>
    <string name="settings_content_disk_kb">KB</string>
    <string name="settings_content_disk_b">B</string>
    <string name="settings_title_account">Account</string>
    <string name="settings_button_log_out">Log Out</string>
    <string name="settings_title_notifications">Notifications</string>
    <string name="settings_switch_show_notifications">Show Notifications</string>
    <string name="settings_title_debug">Debug</string>
    <string name="settings_switch_verbose_logging">Verbose Logging</string>
    <string name="settings_title_app_version">App Version</string>
    <string name="settings_title_android_version">Android Version</string>
    <string name="settings_title_atlas_version">Atlas Version</string>
    <string name="settings_title_layer_version">Layer Version</string>
    <string name="settings_title_user_id">User ID</string>
    <string name="settings_title_statistics">Statistics</string>
    <string name="settings_title_conversations">Conversations</string>
    <string name="settings_title_messages">Messages</string>
    <string name="settings_title_unread_messages">Unread Messages</string>
    <string name="settings_title_rich_content">Rich Content</string>
    <string name="settings_title_disk_utilization">Disk Utilization</string>
    <string name="settings_title_disk_allowance">Disk Allowance</string>
    <string name="settings_title_auto_download_types">Auto-Download MIME Types</string>

    <string name="notifications_num_more">+%1$d more</string>
    <string name="notifications_new_messages">%1$s new messages</string>
    <string name="sort_users">Sort</string>
    <string name="aboutUs">The Modern Language Centre provides courses to King\'s undergraduate and graduate students, and to the local professional and residential community. It is situated in the heart of London, at the College\'s main Strand Campus. It is close to Waterloo and Charing Cross train stations as well as Holborn, the City and Covent Garden.\n\nThe Centre is part of the Faculty of Arts and Humanities, one of the UK’s most prestigious and comprehensive faculties of its kind.\n\nThe MLC employs over 100 teaching staff from a wide range of linguistic and cultural backgrounds.\n\nAll teaching staff are native speakers of the language they teach, and have in-depth knowledge of language teaching methodology. Many have expertise in other areas such as journalism, politics, business, international affairs and the health sector.\n\nIn recent years the Centre has expanded its activities and has implemented a number of leading-edge UK-based projects, including the design of customised and generic elearning packages.\n\nThe Centre also offers a state-of-the-art Language Resources Centre for independent language learning; the Language Resources Centre houses a large collection of learning materials as well as magazines and newspapers, CDs, DVDs, satellite television, computer-based materials and internet links.\n\nFor more information please check the department website at http://www.kcl.ac.uk/artshums/depts/mlc/</string>
    <string name="splash_screen_disclaimer">Please note that the King\'s College London Tandem Language Learning application is an unmoderated community and is built on user trust. \n\n Please respect this and others within the community and use the application in good faith!</string>

</resources>
