<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Application Settings">
        <menu>
            <item
                android:id="@+id/menuRefresh"
                android:title="@string/refresh"
                android:icon="@drawable/ic_refresh_black_48dp"/>
            <item
                android:id="@+id/menuSettings"
                android:title="@string/settings"
                android:icon="@drawable/ic_settings_black_48dp"/>
            <item
                android:id="@+id/menuAboutUs"
                android:title="@string/about_us"
                android:icon="@drawable/ic_help_black_48dp"/>
        </menu>
    </item>

    <item android:title="@string/accountSettings">
        <menu>
            <item
                android:id="@+id/menuLogOut"
                android:title="@string/logout"
                android:icon="@drawable/ic_directions_run_black_48dp"/>
        </menu>
    </item>

</menu>
