<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/editProfile"
        android:icon="@drawable/ic_edit_white_48dp"
        android:orderInCategory="3"
        android:title="@string/edit"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/saveEditProfile"
        android:icon="@drawable/ic_save_white_48dp"
        android:orderInCategory="1"
        android:title="@string/save"
        android:visible="false"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/cancelEditProfile"
        android:icon="@drawable/ic_cancel_white_48dp"
        android:orderInCategory="2"
        android:title="@string/cancel"
        android:visible="false"
        app:showAsAction="always">
    </item>


</menu>