<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="100"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <!-- First Name Label -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kings"
                    android:textSize="30sp"
                    android:id="@+id/title"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <EditText android:id="@+id/registerForename"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:hint="@string/forename"
                        android:nextFocusForward="@+id/registerSurname"/>

                </android.support.design.widget.TextInputLayout>

                <!-- Surname Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <EditText android:id="@+id/registerSurname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:hint="@string/surname"
                        android:nextFocusForward="@+id/registerEmail"/>

                </android.support.design.widget.TextInputLayout>


                <!--  Email Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <EditText android:id="@+id/registerEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email"
                        android:nextFocusForward="@+id/registerUsername"/>

                </android.support.design.widget.TextInputLayout>

                <!--  username Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <EditText android:id="@+id/registerUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:hint="@string/user"
                        android:nextFocusForward="@+id/registerPassword"/>

                </android.support.design.widget.TextInputLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <!-- Password Label -->
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText android:id="@+id/registerPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:hint="@string/password"
                            android:nextFocusForward="@+id/registerButton"/>

                    </android.support.design.widget.TextInputLayout>

                    <CheckBox
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:id ="@+id/toggleRPass"
                        android:layout_gravity="center_vertical|right"/>

                </FrameLayout>

                <!-- Signup Button -->
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/registerButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/signup"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <TextView android:id="@+id/loginAccount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/prevAccount"
        android:layout_weight="1"
        android:padding="10dp" />

</LinearLayout>