<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccent"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kings"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tandem"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center"/>

    </LinearLayout>

    <me.itangqi.waveloadingview.WaveLoadingView
        android:id="@+id/waveLoadingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        app:wlv_borderWidth="10dp"
        app:wlv_waveAmplitude="70"
        app:wlv_progressValue="0"
        app:wlv_borderColor="#F2F2F2"
        app:wlv_waveColor="#FFFFFF"
        app:wlv_titleCenter="Loading..."
        app:wlv_titleCenterSize="20sp"
        app:wlv_titleCenterColor="#FFFFFF"
        android:layout_centerInParent="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="10sp"
        android:text="@string/splash_screen_disclaimer"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"/>

</RelativeLayout>