<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/settings_title_account"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <com.layer.atlas.AtlasAvatar
                    android:id="@+id/avatar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="[username]"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>

                    <TextView
                        android:id="@+id/user_state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="[connection state]"
                        android:textAppearance="?android:attr/textAppearanceSmall"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/atlas_view_divider"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/settings_title_notifications"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/settings_switch_show_notifications"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <Switch
                    android:id="@+id/show_notifications_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/atlas_view_divider"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/settings_title_statistics"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_title_conversations"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <TextView
                    android:id="@+id/conversation_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="[conversation count]"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_title_messages"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <TextView
                    android:id="@+id/message_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="[message count]"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_title_unread_messages"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <TextView
                    android:id="@+id/unread_message_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="[unread message count]"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
